--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,1 +1,2 @@
-2018-07-22: Updated repo to Version 4. 
+	2018-07-22: Updated repo to Version 4.
+	2018-07-25: Updated color scheme to include orange.
