--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,3 @@
 	2018-07-22: Updated repo to Version 4.
 	2018-07-25: Updated color scheme and added GitLab & Instagram links.
+    2018-08-08: Updated color scheme again.
