--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
-    2018-07-22: Updated repo to Version 4.
-    2018-07-25: Updated color scheme and added GitLab & Instagram links.
-    2018-08-08: Updated color scheme again.
+2018:
+    July:
+        22: Updated repo to Version 4.
+        25: Updated color scheme and added GitLab & Instagram links.
+    August:
+        08: Updated color scheme again.
+        09: Updated CHANGELOG formatting.
