--- a/404.md
+++ b/404.md
@@ -2,5 +2,7 @@
 title: Page Not Found
 ---
 
-Whoops, looks like there's no page here.
+<link rel="stylesheet" href="/style.css">
+
+Whoops, looks like there's no page here. You can return to the home page <a href="/">here</a>.
 
