markdown'd some html

--- a/404.md
+++ b/404.md
@@ -4,5 +4,4 @@ title: Page Not Found
 
 <link rel="stylesheet" href="/style.css">
 
-Whoops, looks like there's no page here. You can return to the home page <a href="/">here</a>.
-
+Whoops, looks like there's no page here. You can return to the home page [here](/).
