moved css to subdirectory

--- a/404.md
+++ b/404.md
@@ -3,6 +3,6 @@ title: Page Not Found
 layout: raw
 ---
 
-<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="/css/style.css">
 
 Whoops, looks like there's no page here. You can return to the home page [here](/).
