--- a/src/favorites.org
+++ b/src/favorites.org
@@ -1,3 +1,4 @@
+#+BEGIN_SRC html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,6 +17,7 @@
 <main>
 <iframe src="https://duckduckgo.com/search.html?bgcolor=272822&amp;focus=yes" style="overflow:hidden;margin:0;padding:0;max-width:900px;height:60px;" frameborder="0">
 </iframe>
+#+END_SRC
 
 +[["https://my.stevens.edu/][MyStevens]]
 +[[https://todoist.com/app][Todoist]]
