fixed html export tags

--- a/src/favorites.org
+++ b/src/favorites.org
@@ -1,4 +1,4 @@
-#+BEGIN_HTML
+#+BEGIN_EXPORT html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,7 +17,7 @@
 <main>
 <iframe src="https://duckduckgo.com/search.html?bgcolor=272822&amp;focus=yes" style="overflow:hidden;margin:0;padding:0;max-width:900px;height:60px;" frameborder="0">
 </iframe>
-#+END_HTML
+#+END_EXPORT html
 
 +[[https://my.stevens.edu/][MyStevens]]
 +[[https://todoist.com/app][Todoist]]
@@ -38,7 +38,7 @@
 +[[https://www.guitar-chords.org.uk/c-major-chord.html][Guitar Chords]]
 +[[http://127.0.0.1:43110/1PLAYgDQboKojowD3kwdb3CtWmWaokXvfp][Play]]
 
-#+BEGIN_HTML
+#+BEGIN_EXPORT html
 <div id="cont_d59b9658b0ffc396f7f7cbb6f0de78ca">
 <script type="text/javascript" async="" src="https://www.theweather.com/wid_loader/d59b9658b0ffc396f7f7cbb6f0de78ca"></script>
 </div>
@@ -52,4 +52,4 @@
 </footer>
 </body>
 </html>
-#+END_HTML
+#+END_EXPORT html
