--- a/src/favorites.org
+++ b/src/favorites.org
@@ -1,23 +1,21 @@
-#+BEGIN_EXPORT html
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<title>Eric S. Londres</title>
-<link rel="stylesheet" type="text/css" href="css/style.css"/>
-</head>
-<body>
-<nav>
+#+HTML: <!DOCTYPE html>
+#+HTML:<html lang="en">
+#+HTML:<head>
+#+HTML:<title>Eric S. Londres</title>
+#+HTML:<link rel="stylesheet" type="text/css" href="css/style.css"/>
+#+HTML:</head>
+#+HTML:<body>
+#+HTML:<nav>
 
-<p><a href="/">home</a>
-<a href="/games/">games</a>
-<a href="/blog/">blog</a>
-<a href="/publications/">publications</a></p>
+#+HTML:<p><a href="/">home</a>
+#+HTML:<a href="/games/">games</a>
+#+HTML:<a href="/blog/">blog</a>
+#+HTML:<a href="/publications/">publications</a></p>
 
-</nav>
-<main>
-<iframe src="https://duckduckgo.com/search.html?bgcolor=272822&amp;focus=yes" style="overflow:hidden;margin:0;padding:0;max-width:900px;height:60px;" frameborder="0">
-</iframe>
-#+END_EXPORT html
+#+HTML:</nav>
+#+HTML:<main>
+#+HTML:<iframe src="https://duckduckgo.com/search.html?bgcolor=272822&amp;focus=yes" style="overflow:hidden;margin:0;padding:0;max-width:900px;height:60px;" frameborder="0">
+#+HTML:</iframe>
 
 +[[https://my.stevens.edu/][MyStevens]]
 +[[https://todoist.com/app][Todoist]]
@@ -38,18 +36,16 @@
 +[[https://www.guitar-chords.org.uk/c-major-chord.html][Guitar Chords]]
 +[[http://127.0.0.1:43110/1PLAYgDQboKojowD3kwdb3CtWmWaokXvfp][Play]]
 
-#+BEGIN_EXPORT html
-<div id="cont_d59b9658b0ffc396f7f7cbb6f0de78ca">
-<script type="text/javascript" async="" src="https://www.theweather.com/wid_loader/d59b9658b0ffc396f7f7cbb6f0de78ca"></script>
-</div>
+#+HTML:<div id="cont_d59b9658b0ffc396f7f7cbb6f0de78ca">
+#+HTML:<script type="text/javascript" async="" src="https://www.theweather.com/wid_loader/d59b9658b0ffc396f7f7cbb6f0de78ca"></script>
+#+HTML:</div>
 
-</main>
-<footer>
+#+HTML:</main>
+#+HTML:<footer>
 
-<hr />
-<p>© 2019 Eric S. Londres. This website is licensed under the terms of the <a href="/GPL">GNU GPL</a>. You can view the source code <a href="https://gitlab.com/slondr/slondr.gitlab.io">here</a>.</p>
+#+HTML:<hr />
+#+HTML:<p>© 2019 Eric S. Londres. This website is licensed under the terms of the <a href="/GPL">GNU GPL</a>. You can view the source code <a href="https://gitlab.com/slondr/slondr.gitlab.io">here</a>.</p>
 
-</footer>
-</body>
-</html>
-#+END_EXPORT html
+#+HTML:</footer>
+#+HTML:</body>
+#+HTML:</html>
