update license notice in readme

--- a/README.org
+++ b/README.org
@@ -10,4 +10,5 @@ This is the personal website of Eric S. Londres (=slondr=). It is primarily host
 
 The website is hosted on GitLab Pages and updated via Gitlab CI. The current version is =3.0= - you can view the full version release history in the tags.
 
-All code is copyright Eric S. Londres, and, where possible, is licensed under the terms of the GNU AGPLv3 (or any later version).
+All code is copyright Eric S. Londres, and is distributed under the terms of the GNU Affero General Public License, either version 3 or (at your option) any later version.
+You can find a copy of the GNU Affero General Public License in [[file:LICENSE][LICENSE]].
